--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 
 <body>
     <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm</p>
+        <p class='masthead-intro'>Hi I'm jonathan Hernandez</p>
         <h1 class='masthead-heading'>Jonathan Hernandez</h1> 
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I like nature</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>North CArolina</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>be with my family</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>software engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>gastonia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>passion</p>
     </section>
 
     <footer id="footer">
